add file upload when create task

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,10 +16,10 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect  # 指定 Hibernate 的 MySQL 8 方言
     hibernate:
       ddl-auto: update  # 自动更新数据库表结构（根据项目需求调整为 none, update, create-drop 等）
-  devtools:
-    restart:
-      additional-paths: src/main/java
-      enabled: true
+#  devtools:
+#    restart:
+#      additional-paths: src/main/java
+#      enabled: true
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/**/*.xml  # 扫描所有的 XML 映射文件
