update createtask file

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,3 +29,9 @@ mybatis-plus:
   global-config:
     db-config:
       id-type: auto  # 主键自增策略
+
+logging:
+  level:
+    root=DEBUG:
+    org:
+      springframework=DEBUG:
