--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,18 @@
 			<optional>true</optional>
 		</dependency>
 
+<!--		二维码-->
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.5.2</version>
+		</dependency>
+
 <!--		热部署-->
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
